# openenv-customer-support

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  push_to_hf.py  pyproject.toml  tasks.json  verify_env.py  verify_tasks.py
app/: env.py  main.py
backend/: grader.py  main.py
frontend/src/app/: globals.css  page.tsx
scripts/: baseline_run.py  inference.py  pre-validation.sh  test_env.py
server/: app.py  env.py  grader.py  models.py  tasks.py
static/: index.html
