[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "0.1.0"
description = "Enterprise AI Customer Support Simulation"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "backend.main:main"

[tool.setuptools]
packages = ["backend"]

[tool.openenv]
environment = "backend.env:CustomerSupportEnv"
